Slightly modified the question-select containers, fixing margin and gap

--- a/static/styles.css
+++ b/static/styles.css
@@ -123,7 +123,7 @@ main {
   margin: 50px 0 10px 0;
   border-radius: 20px;
   border: 1px solid black;
-  padding: 20px 30px;
+  padding: 10px 20px;
 }
 
 .center {
@@ -146,7 +146,6 @@ form {
 
 .field-row {
   display: flex;
-  flex-direction: row;
   width: 100%;
 }
 
@@ -160,21 +159,18 @@ form {
   margin-bottom: 5px;
 }
 
-/* Create page */
-.question-select_container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
 
+
+/* Create page */
 .question-select_row {
   display: flex;
-  gap: 15px;
 }
 
 .question-select_item {
   display: flex;
   width: 100%;
+  margin: 10px 10px;
+  gap: 5px;
 }
 
 .question-type-select_row {
